--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   font-family: sans-serif;
   background-color: #f2f2f2;
@@ -14,6 +14,7 @@ body {
   cursor: pointer;
   position: relative;
   margin: 1rem auto;
+  width: 50%;
 }
 
 .movie-director {
@@ -54,6 +55,7 @@ body {
   margin: 1rem auto;
 }
 .save-button {
+  cursor: pointer;
   position: absolute;
   top: 25px;
   right: 25px;
@@ -67,6 +69,12 @@ body {
 }
 
 .home-button {
+  cursor: pointer;
   padding: 5px 10px;
   background-color: lightskyblue;
+}
+
+.home-button:hover {
+  background-color: #000;
+  color: #87CEFA;
 }
