--- a/client/src/styles/_movie-card.scss
+++ b/client/src/styles/_movie-card.scss
@@ -1,16 +1,19 @@
 .movie-card {
-    background-color: #fff;
-    border: 0;
+    background-color: #000;
+    border: 2px groove #FFF;
+    border-radius: 5px;
     box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
       0 2px 4px rgba(0, 0, 0, 0.24);
+    color: #fff;
     padding: 1rem;
     cursor: pointer;
     position: relative;
     margin: 1rem auto;
-    width: 50%;
+    text-align: center;
+    width: 65%;
 
     .movie-director {
-      padding: 4px 0;
+      padding: 4px;
       font-size: 0.8rem;
     }
   }
