--- a/client/src/styles/_saved-list.scss
+++ b/client/src/styles/_saved-list.scss
@@ -1,9 +1,10 @@
 .saved-list {
-    background-color: #fff;
+    background-color: #000;
     border: 0;
     box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
       0 2px 4px rgba(0, 0, 0, 0.24);
     padding: 1rem;
+    color: #FFF;
     cursor: pointer;
     position: relative;
     margin: 1rem auto;
@@ -38,6 +39,7 @@
     border: 1px solid grey;
     padding: 5px 10px;
     background-color: lightseagreen;
+    @include easeOut();
 
     &:hover {
         background-color: green;
