--- a/client/src/styles/_movie-card.scss
+++ b/client/src/styles/_movie-card.scss
@@ -1,7 +1,7 @@
 .movie-card {
     background-color: #000;
-    border: 2px groove #FFF;
-    border-radius: 5px;
+    border: 2px outset #FFF;
+    border-radius: 10px;
     box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
       0 2px 4px rgba(0, 0, 0, 0.24);
     color: #fff;
